docs(develop): use inline notification

--- a/src/pages/migrating/guide/develop.mdx
+++ b/src/pages/migrating/guide/develop.mdx
@@ -183,8 +183,12 @@ can now provide them using the `with` syntax:
 
 If you were using any feature flags in v10, you can safely remove them in v11.
 
-_Note: you can also use `@import` to bring in Carbon, if you prefer, although
-`@use` is recommended._
+<InlineNotification>
+
+You can also use `@import` to bring in Carbon, if you prefer, although `@use` is
+recommended.
+
+</InlineNotification>
 
 If you were bringing parts of Carbon, you'll need to update the paths to reflect
 the new paths in `@carbon/styles`. In general, most paths moved from
