docs(develop): update not conventions to use bold

--- a/src/pages/migrating/guide/develop.mdx
+++ b/src/pages/migrating/guide/develop.mdx
@@ -123,10 +123,10 @@ to use it once you install the dependency.
 
 ### Step 3: Setup Dart Sass for your project
 
-Once you have Dart Sass installed, it's important that you configure your project
-to support resolving imports in Sass from `node_modules`. Typically, this means
-adding `node_modules` to your `includePaths` config for Sass in your bundler or
-toolchain of choice.
+Once you have Dart Sass installed, it's important that you configure your
+project to support resolving imports in Sass from `node_modules`. Typically,
+this means adding `node_modules` to your `includePaths` config for Sass in your
+bundler or toolchain of choice.
 
 To learn more about how to configure your specific toolchain to support this,
 read the documentation for configuration
@@ -183,12 +183,8 @@ can now provide them using the `with` syntax:
 
 If you were using any feature flags in v10, you can safely remove them in v11.
 
-<InlineNotification>
-
-You can also use `@import` to bring in Carbon, if you prefer, although `@use` is
-recommended.
-
-</InlineNotification>
+**Note:** you can also use `@import` to bring in Carbon, if you prefer, although
+`@use` is recommended.
 
 If you were bringing parts of Carbon, you'll need to update the paths to reflect
 the new paths in `@carbon/styles`. In general, most paths moved from
@@ -215,9 +211,9 @@ For a full list of the paths that have changed in `carbon-components`, check out
 our
 [Migration Docs](https://github.com/carbon-design-system/carbon/blob/main/docs/migration/v11.md#changing-import-paths-from-scssglobalsscss-to-scss).
 
-_Note: if you see any references to `@carbon/styles` for style imports, you can
-safely replace the beginning of the path with `@carbon/react` for the same
-import in this package._
+**Note:** if you see any references to `@carbon/styles` for style imports, you
+can safely replace the beginning of the path with `@carbon/react` for the same
+import in this package.
 
 ### Step 5: Update Sass imports
 
@@ -367,7 +363,7 @@ size options fall under the following values:
 | `xl`       | 64px |
 | `2xl`      | 80px |
 
-_Note: the default size in v11 is `md` (`40px`)._
+**Note:** the default size in v11 is `md` (`40px`).
 
 The following components all have size variants that may be affected in your
 code. To update, you will need to switch to one of the size options above.
@@ -659,8 +655,8 @@ can now provide them using the `with` syntax:
 
 If you were using any feature flags in v10, you can safely remove them in v11.
 
-_Note: you can also use `@import` to bring in Carbon, if you prefer, although
-`@use` is recommended._
+**Note:** you can also use `@import` to bring in Carbon, if you prefer, although
+`@use` is recommended.
 
 If you were bringing parts of Carbon, you'll need to update the paths to reflect
 the new paths in `@carbon/styles`. In general, most paths moved from
