--- a/src/pages/components/tabs/usage.mdx
+++ b/src/pages/components/tabs/usage.mdx
@@ -17,10 +17,11 @@ between groups of information that appear within the same context.
 
 <InlineNotification>
 
-**v11 update:** The tab component variant names are changing. Default tabs has
-become _Line tabs_ and Container tabs has become _Contained tabs_. Tabs has also
-been refactor to have composable component API which allows for additional
-modifications like icons in tabs and secondary labels.
+**v11 update:** The tab component variant names have changed. Default tabs has
+become _Line tabs_ and Container tabs has become _Contained tabs_. The tabs
+component has also been refactored and now includes a composable component API
+which allows for additional style modifications like icons in tabs and secondary
+labels.
 
 </InlineNotification>
 
