Apply suggestions from code review
Co-authored-by: Abbey Hart <abbeyhrt@gmail.com>

--- a/src/pages/components/UI-shell-header/usage.mdx
+++ b/src/pages/components/UI-shell-header/usage.mdx
@@ -18,7 +18,7 @@ interaction patterns that persist between and across products.
 
 **v11 update:** The UI shell is now themeable and has been updated to use inline
 theming. The UI shell uses Carbon theme tokens instead of component specific
-tokens and the color will follow each themes styles.
+tokens and the color will follow each theme's styles.
 
 </InlineNotification>
 
