V11 - add component banners + other updates (#2838)
* v11 - release updates

* added links

* remove links

* content updates

* Apply suggestions from code review

Co-authored-by: Abbey Hart <abbeyhrt@gmail.com>

Co-authored-by: Abbey Hart <abbeyhrt@gmail.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/src/pages/components/UI-shell-left-panel/usage.mdx
+++ b/src/pages/components/UI-shell-left-panel/usage.mdx
@@ -14,6 +14,14 @@ interaction patterns that persist between and across products.
 
 </PageDescription>
 
+<InlineNotification>
+
+**v11 update:** The UI shell is now themeable and has been updated to use inline
+theming. The UI shell uses Carbon theme tokens instead of component specific
+tokens and the color will follow each theme's styles.
+
+</InlineNotification>
+
 <AnchorLinks>
 
 <AnchorLink>General guidance</AnchorLink>
