--- a/src/pages/components/UI-shell-right-panel/usage.mdx
+++ b/src/pages/components/UI-shell-right-panel/usage.mdx
@@ -14,6 +14,14 @@ interaction patterns that persist between and across products.
 
 </PageDescription>
 
+<InlineNotification>
+
+**v11 update:** The UI shell is now themeable and has been updated to use inline
+theming. The UI shell uses Carbon theme tokens instead of component specific
+tokens and the color will follow each theme's styles.
+
+</InlineNotification>
+
 <AnchorLinks>
 
 <AnchorLink>General guidance</AnchorLink>
