--- a/src/pages/components/tabs/usage.mdx
+++ b/src/pages/components/tabs/usage.mdx
@@ -15,6 +15,16 @@ between groups of information that appear within the same context.
 
 </PageDescription>
 
+<InlineNotification>
+
+**v11 update:** The tab component variant names have changed. Default tabs has
+become _Line tabs_ and Container tabs has become _Contained tabs_. The tabs
+component has also been refactored and now includes a composable component API
+which allows for additional style modifications like icons in tabs and secondary
+labels.
+
+</InlineNotification>
+
 <AnchorLinks>
 
 <AnchorLink>Overview</AnchorLink>
@@ -101,8 +111,7 @@ such as modals, cards, or side panels.
     Tab,
     TabPanels,
     TabPanel,
-  }}
->
+  }}>
   <ComponentVariant
     id="tabs"
     knobs={{
@@ -118,8 +127,7 @@ such as modals, cards, or side panels.
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tabs',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-tabs--default',
-    }}
-  >{`
+    }}>{`
 <div style={{ width: '50%' }}>
   <Tabs>
     <TabList aria-label="List of tabs" contained>
