--- a/src/pages/migrating/guide/develop.mdx
+++ b/src/pages/migrating/guide/develop.mdx
@@ -10,7 +10,7 @@ import { Tag } from '@carbon/react';
 
 <PageDescription>
 
-Step-by-step guide to updating your code from Carbon v10 to v11
+Step-by-step guide to updating your code from Carbon v10 to v11.
 
 </PageDescription>
 
