docs(migrating): update develop guide and overview (#2834)
* docs(migrating): update develop guide to include carbon-components

* docs(v11): add carbon-components-react section

* docs(migration): update guide and overview page

* Update src/pages/migrating/guide/develop.mdx

Co-authored-by: Anna Gonzales <agonz@us.ibm.com>

* Update src/pages/migrating/guide/develop.mdx

Co-authored-by: Anna Gonzales <agonz@us.ibm.com>

* Update src/pages/migrating/guide/develop.mdx

Co-authored-by: Anna Gonzales <agonz@us.ibm.com>

* docs(develop): use inline notification

* docs(develop): update style to inline notification

* docs(develop): update not conventions to use bold

* Update src/pages/migrating/guide/develop.mdx

Co-authored-by: Abbey Hart <abbeyhrt@gmail.com>

Co-authored-by: Anna Gonzales <agonz@us.ibm.com>
Co-authored-by: Abbey Hart <abbeyhrt@gmail.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/src/pages/migrating/guide/design.mdx
+++ b/src/pages/migrating/guide/design.mdx
@@ -211,7 +211,8 @@ responsive and the type styles change size at different breakpoints.
   <Column colLg={4} colMd={4} noGutterSm>
     <ResourceCard
       subTitle="Type token migration table"
-      href="https://github.com/carbon-design-system/carbon/blob/main/docs/migration/v11.md#type-tokens">
+      href="https://github.com/carbon-design-system/carbon/blob/main/docs/migration/v11.md#type-tokens"
+    >
       <MdxIcon name="github" />
     </ResourceCard>
   </Column>
@@ -277,7 +278,8 @@ for more information.
   <Column colLg={4} colMd={4} noGutterSm>
     <ResourceCard
       subTitle="Color token migration table"
-      href="https://github.com/carbon-design-system/carbon/blob/main/docs/migration/v11.md#design-tokens">
+      href="https://github.com/carbon-design-system/carbon/blob/main/docs/migration/v11.md#design-tokens"
+    >
       <MdxIcon name="github" />
     </ResourceCard>
   </Column>
