--- a/src/pages/components/data-table/usage.mdx
+++ b/src/pages/components/data-table/usage.mdx
@@ -59,11 +59,7 @@ table display settings, and other utilities.
 ## Live demo
 
 import { rowData, headerData } from '../../../data/components/data-table.js';
-import {
-  Delete16 as Delete,
-  Save16 as Save,
-  Download16 as Download,
-} from '@carbon/icons-react';
+import { TrashCan, Save, Download } from '@carbon/icons-react';
 
 <ComponentDemo
   components={[
@@ -84,7 +80,7 @@ import {
       label: 'With batch actions',
     },
   ]}
-  scope={{ rowData, headerData, React, Delete, Save, Download }}
+  scope={{ rowData, headerData, React, Trash, Save, Download }}
 >
   <ComponentVariant
     id="default-table"
@@ -257,7 +253,7 @@ import {
         <TableBatchActions {...getBatchActionProps()}>
           <TableBatchAction
             tabIndex={getBatchActionProps().shouldShowBatchActions ? 0 : -1}
-            renderIcon={Delete}
+            renderIcon={TrashCan}
             onClick={() => console.log('clicked')}
           >
             Delete
