--- a/src/pages/components/structured-list/code.mdx
+++ b/src/pages/components/structured-list/code.mdx
@@ -6,7 +6,7 @@ description:
 tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 ---
 
-import { CheckmarkFilled16 } from '@carbon/icons-react';
+import { CheckmarkFilled } from '@carbon/icons-react';
 
 <PageDescription>
 
