--- a/src/pages/components/structured-list/usage.mdx
+++ b/src/pages/components/structured-list/usage.mdx
@@ -55,7 +55,7 @@ which supports nesting items and presents a larger set of content.
 
 ## Live demo
 
-import { CheckmarkFilled16 } from '@carbon/icons-react';
+import { CheckmarkFilled } from '@carbon/icons-react';
 
 <ComponentDemo
   components={[
