--- a/src/pages/components/tooltip/code.mdx
+++ b/src/pages/components/tooltip/code.mdx
@@ -6,7 +6,7 @@ description:
 tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 ---
 
-import { Filter16 } from '@carbon/icons-react';
+import { Filter } from '@carbon/icons-react';
 
 <PageDescription>
 
