--- a/src/pages/components/tooltip/usage.mdx
+++ b/src/pages/components/tooltip/usage.mdx
@@ -155,7 +155,7 @@ The exception here is that definition tooltip can be invoked on `hover` or
 
 ## Live demo
 
-import { Filter16 } from '@carbon/icons-react';
+import { Filter } from '@carbon/icons-react';
 
 <ComponentDemo
   components={[
@@ -172,7 +172,8 @@ import { Filter16 } from '@carbon/icons-react';
       label: 'Definition tooltip',
     },
   ]}
-  scope={{ Filter16 }}>
+  scope={{ Filter16 }}
+>
   <ComponentVariant
     id="tooltip"
     links={{
@@ -184,7 +185,8 @@ import { Filter16 } from '@carbon/icons-react';
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tooltip',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--default',
-    }}>{`
+    }}
+  >{`
     <Tooltip
       direction="bottom"
       tabIndex={0}
@@ -215,7 +217,8 @@ import { Filter16 } from '@carbon/icons-react';
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tooltip',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--icon',
-    }}>{`
+    }}
+  >{`
     <TooltipIcon
       tooltipText="Filter"
     >
@@ -236,7 +239,8 @@ import { Filter16 } from '@carbon/icons-react';
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tooltip',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--definition',
-    }}>{`
+    }}
+  >{`
     <TooltipDefinition
       tooltipText="Brief description of the dotted, underlined word above."
     >
