--- a/src/pages/developing/react-tutorial/step-4.mdx
+++ b/src/pages/developing/react-tutorial/step-4.mdx
@@ -253,7 +253,7 @@ While we're at the top of `LandingPage.js`, import the icons that we'll need as
 well.
 
 ```javascript path=src/content/LandingPage/LandingPage.js
-import { Application32, Globe32, PersonFavorite32 } from '@carbon/icons-react';
+import { Application, Globe, PersonFavorite } from '@carbon/icons-react';
 ```
 
 <InlineNotification>
