--- a/src/pages/guidelines/pictograms/usage.mdx
+++ b/src/pages/guidelines/pictograms/usage.mdx
@@ -6,7 +6,7 @@ description:
 tabs: ['Library', 'Usage', 'Code', 'Contribute']
 ---
 
-import { Bee32 } from '@carbon/icons-react';
+import { Bee } from '@carbon/icons-react';
 
 <PageDescription>
 
