--- a/src/pages/whats-happening/meetups/index.mdx
+++ b/src/pages/whats-happening/meetups/index.mdx
@@ -7,7 +7,7 @@ description:
 ---
 
 import { Button } from '@carbon/react';
-import { ArrowRight16 } from '@carbon/icons-react';
+import { ArrowRight } from '@carbon/icons-react';
 
 <PageDescription>
 
