--- a/src/pages/contributing/add-ons.mdx
+++ b/src/pages/contributing/add-ons.mdx
@@ -5,7 +5,7 @@ description:
   a specific product or experience.
 ---
 
-import { CheckmarkFilled16 } from '@carbon/icons-react';
+import { CheckmarkFilled } from '@carbon/icons-react';
 
 <AnchorLinks>
 
