fix(data-table): update Trash to TrashCan

--- a/src/pages/components/data-table/usage.mdx
+++ b/src/pages/components/data-table/usage.mdx
@@ -80,7 +80,7 @@ import { TrashCan, Save, Download } from '@carbon/icons-react';
       label: 'With batch actions',
     },
   ]}
-  scope={{ rowData, headerData, React, Trash, Save, Download }}
+  scope={{ rowData, headerData, React, TrashCan, Save, Download }}
 >
   <ComponentVariant
     id="default-table"
