--- a/src/pages/components/structured-list/usage.mdx
+++ b/src/pages/components/structured-list/usage.mdx
@@ -68,7 +68,7 @@ import { CheckmarkFilled } from '@carbon/icons-react';
       label: 'Selectable structured list',
     },
   ]}
-  scope={{ CheckmarkFilled16 }}
+  scope={{ CheckmarkFilled }}
 >
   <ComponentVariant
     id="default-structured-list"
@@ -176,11 +176,11 @@ import { CheckmarkFilled } from '@carbon/icons-react';
             defaultChecked
           />
          <StructuredListCell>
-            <CheckmarkFilled16
+            <CheckmarkFilled
               className="cds--structured-list-svg"
               aria-label="select an option">
               <title>select an option</title>
-            </CheckmarkFilled16>
+            </CheckmarkFilled>
           </StructuredListCell>
         </StructuredListRow>
         <StructuredListRow tabIndex={0}>
@@ -200,11 +200,11 @@ import { CheckmarkFilled } from '@carbon/icons-react';
             name="row-2"
           />
          <StructuredListCell>
-            <CheckmarkFilled16
+            <CheckmarkFilled
               className="cds--structured-list-svg"
               aria-label="select an option">
               <title>select an option</title>
-            </CheckmarkFilled16>
+            </CheckmarkFilled>
           </StructuredListCell>
         </StructuredListRow>
         <StructuredListRow tabIndex={0}>
@@ -224,11 +224,11 @@ import { CheckmarkFilled } from '@carbon/icons-react';
             name="row-3"
           />
          <StructuredListCell>
-            <CheckmarkFilled16
+            <CheckmarkFilled
               className="cds--structured-list-svg"
               aria-label="select an option">
               <title>select an option</title>
-            </CheckmarkFilled16>
+            </CheckmarkFilled>
           </StructuredListCell>
         </StructuredListRow>
       </StructuredListBody>
