fix(structured-list): icon usage

--- a/src/pages/components/structured-list/code.mdx
+++ b/src/pages/components/structured-list/code.mdx
@@ -73,7 +73,7 @@ code usage documentation, see the Storybooks for each framework below.
       label: 'Selectable structured list',
     },
   ]}
-  scope={{ CheckmarkFilled16 }}
+  scope={{ CheckmarkFilled }}
 >
   <ComponentVariant
     id="default-structured-list"
@@ -181,11 +181,11 @@ code usage documentation, see the Storybooks for each framework below.
             defaultChecked
           />
          <StructuredListCell>
-            <CheckmarkFilled16
+            <CheckmarkFilled
               className="cds--structured-list-svg"
               aria-label="select an option">
               <title>select an option</title>
-            </CheckmarkFilled16>
+            </CheckmarkFilled>
           </StructuredListCell>
         </StructuredListRow>
         <StructuredListRow tabIndex={0}>
@@ -205,11 +205,11 @@ code usage documentation, see the Storybooks for each framework below.
             name="row-2"
           />
          <StructuredListCell>
-            <CheckmarkFilled16
+            <CheckmarkFilled
               className="cds--structured-list-svg"
               aria-label="select an option">
               <title>select an option</title>
-            </CheckmarkFilled16>
+            </CheckmarkFilled>
           </StructuredListCell>
         </StructuredListRow>
         <StructuredListRow tabIndex={0}>
@@ -229,11 +229,11 @@ code usage documentation, see the Storybooks for each framework below.
             name="row-3"
           />
          <StructuredListCell>
-            <CheckmarkFilled16
+            <CheckmarkFilled
               className="cds--structured-list-svg"
               aria-label="select an option">
               <title>select an option</title>
-            </CheckmarkFilled16>
+            </CheckmarkFilled>
           </StructuredListCell>
         </StructuredListRow>
       </StructuredListBody>
