fix(icons): usage of ArrowRight

--- a/src/pages/whats-happening/meetups/index.mdx
+++ b/src/pages/whats-happening/meetups/index.mdx
@@ -39,7 +39,7 @@ along to see other work in progress and learn that way.
 <Row>
   <Button
     kind="tertiary"
-    renderIcon={ArrowRight16}
+    renderIcon={ArrowRight}
     href="https://ec.yourlearning.ibm.com/w3/series/10163237"
   >
     Subscribe
@@ -69,7 +69,7 @@ requirements, and determine next steps on requested components or functionality.
 <Row>
   <Button
     kind="tertiary"
-    renderIcon={ArrowRight16}
+    renderIcon={ArrowRight}
     onClick={() => (window.location.href = 'mailto:iliadm@ca.ibm.com')}
   >
     Email us
@@ -99,7 +99,7 @@ release cycles to detect breaking changes.
 <Row>
   <Button
     kind="tertiary"
-    renderIcon={ArrowRight16}
+    renderIcon={ArrowRight}
     onClick={() => (window.location.href = 'mailto:carbon@us.ibm.com')}
   >
     Email us
@@ -129,7 +129,7 @@ the big picture to the smallest detail! Usually two or more hours.
 <Row>
   <Button
     kind="tertiary"
-    renderIcon={ArrowRight16}
+    renderIcon={ArrowRight}
     onClick={() => (window.location.href = 'mailto:carbon@us.ibm.com')}
   >
     Email us
