fix(tooltip): update filter icon

--- a/src/pages/components/tooltip/code.mdx
+++ b/src/pages/components/tooltip/code.mdx
@@ -77,7 +77,7 @@ documentation, see the Storybooks for each framework below.
       label: 'Definition tooltip',
     },
   ]}
-  scope={{ Filter16 }}
+  scope={{ Filter }}
 >
   <ComponentVariant
     id="tooltip"
@@ -127,7 +127,7 @@ documentation, see the Storybooks for each framework below.
     <TooltipIcon
       tooltipText="Filter"
     >
-      <Filter16/>
+      <Filter/>
     </TooltipIcon>
   `}</ComponentVariant>
   <ComponentVariant
