--- a/src/pages/components/tooltip/usage.mdx
+++ b/src/pages/components/tooltip/usage.mdx
@@ -172,7 +172,7 @@ import { Filter } from '@carbon/icons-react';
       label: 'Definition tooltip',
     },
   ]}
-  scope={{ Filter16 }}
+  scope={{ Filter }}
 >
   <ComponentVariant
     id="tooltip"
@@ -222,7 +222,7 @@ import { Filter } from '@carbon/icons-react';
     <TooltipIcon
       tooltipText="Filter"
     >
-      <Filter16/>
+      <Filter />
     </TooltipIcon>
   `}</ComponentVariant>
   <ComponentVariant
