--- a/src/pages/components/tabs/style.mdx
+++ b/src/pages/components/tabs/style.mdx
@@ -33,16 +33,16 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 <br />
 
-| State    | Element         | Property         | Color token       |
-| -------- | --------------- | ---------------- | ----------------- |
-| Hover    | Label           | text-color       | `$text-primary`   |
-|          | Icon            | svg              | `$icon-primary`   |
-|          | Tab             | border-bottom    | `$border-strong`  |
-| Focus    | Tab: unselected | border           | `$focus`          |
-|          | Tab: selected   | border           | `$focus`          |
-| Disabled | Label           | text-color       | `$text-disabled`  |
-|          | Icon            | svg              | `$icon-disabled`  |
-|          | Tab             | background-color | transparent       |
+| State    | Element         | Property         | Color token        |
+| -------- | --------------- | ---------------- | ------------------ |
+| Hover    | Label           | text-color       | `$text-primary`    |
+|          | Icon            | svg              | `$icon-primary`    |
+|          | Tab             | border-bottom    | `$border-strong`   |
+| Focus    | Tab: unselected | border           | `$focus`           |
+|          | Tab: selected   | border           | `$focus`           |
+| Disabled | Label           | text-color       | `$text-disabled`   |
+|          | Icon            | svg              | `$icon-disabled`   |
+|          | Tab             | background-color | transparent        |
 |          |                 | border-bottom    | `$border-disabled` |
 
 <div className="image--fixed">
@@ -52,8 +52,8 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 </div>
 
 <Caption>
-  Examples of hover, focus-unselected, focus-selected, and disabled states for line
-  tabs.
+  Examples of hover, focus-unselected, focus-selected, and disabled states for
+  line tabs.
 </Caption>
 
 <br />
@@ -68,7 +68,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 |         | Button  | linear-gradient  | `$background` to 100% transparent, 8px |
 |         |         | background-color | `$background`                          |
 | Hover   | Button  | background-color | `$background-hover`                    |
-| Active  | Button  | background-color | `$background-active`                        |
+| Active  | Button  | background-color | `$background-active`                   |
 | Focus   | Button  | border           | `$focus`                               |
 
 <div className="image--fixed">
