docs(website): update links

--- a/src/pages/components/popover/usage.mdx
+++ b/src/pages/components/popover/usage.mdx
@@ -39,8 +39,7 @@ tooltips, overflow menus, and dropdown menus.
   make the component more accessible. Disclosures that contain interactive
   elements use popovers as a base container layer to achieve this accessibility
   standard. For further guidance on how to display content within a popover, see
-  the
-  [disclosure pattern](https://carbondesignsystem.com/patterns/disclosures-pattern/).
+  the [disclosure pattern](/patterns/disclosures-pattern/).
 - Use when you need to display additional details for specific elements on a
   page. If your popover exceeds four columns in width, use a modal instead.
 
@@ -55,7 +54,7 @@ triggered from.
 
 | Variant                 | Purpose                                                                                                                                                                                                                                             |
 | ----------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [No tip](no-tip)        | Popovers without a tip are typically used when the trigger button has a visually defined down state.                                                                                                                                                |
+| [No tip](#no-tip)       | Popovers without a tip are typically used when the trigger button has a visually defined down state.                                                                                                                                                |
 | [Caret tip](#caret-tip) | Popovers with a caret tip should be used to help show the relationship between the popover and where it was triggered from. A caret tip is typically used when the trigger button does not have a visually defined down state and for icon buttons. |
 | [Tab tip](#tab-tip)     | Popovers can have a tab tip when the popover is connected to a toolbar or header area.                                                                                                                                                              |
 
@@ -123,7 +122,7 @@ interactive it can visually change its shape and size depending on the usecase.
 
 The trigger button can open the popover on click, hover, or focus depending on
 what it is being used for. For more information about trigger buttons, see the
-[disclosure pattern](https://carbondesignsystem.com/patterns/disclosures-pattern/).
+[disclosure pattern](/patterns/disclosures-pattern/).
 
 ## Content
 
@@ -131,7 +130,7 @@ what it is being used for. For more information about trigger buttons, see the
 
 Heading, body, and footer content can vary based on your usecase. To see
 examples of content used in popovers, see the
-[disclosure pattern](https://carbondesignsystem.com/patterns/disclosures-pattern/).
+[disclosure pattern](/patterns/disclosures-pattern/).
 
 ### Overflow content
 
@@ -143,7 +142,7 @@ are present. Do not scroll horizontally or let content bleed off the page.
 ### Further guidance
 
 For further content guidance, see Carbon's
-[content guidelines]([https://www.carbondesignsystem.com/guidelines/content/overview/]).
+[content guidelines](/guidelines/content/overview/).
 
 ## No tip
 
@@ -390,27 +389,25 @@ Form components that have menus, like dropdowns, use popovers as a base layer.
 
 Disclosures use popovers as a base layer. Disclosures are comprised of a popover
 container, text, and interactive elements. For further guidance, see Carbon's
-[disclosure pattern](https://carbondesignsystem.com/patterns/disclosures-pattern/).
+[disclosure pattern](/patterns/disclosures-pattern/).
 
 #### Overflow menus
 
 Overflow menus use popovers as a base layer. When the overflow menu icon button
 is triggered, the menu opens and uses a tab tip popover as its base. For further
-guidance, see Carbon's
-[overflow menu](https://www.carbondesignsystem.com/components/overflow-menu/usage/).
+guidance, see Carbon's [overflow menu](/components/overflow-menu/usage/).
 
 #### Toggletips
 
 Toggletips use the popovers as a base layer. Toggletips allow interactive
 elements within the popover container while still being accessible. For further
-guidance, see Carbon's
-[toggletip component](https://carbondesignsystem.com/components/toggletip/usage/)
+guidance, see Carbon's [toggletip component](/components/toggletip/usage/)
 
 #### Tooltips
 
 Tooltips use popovers as a base layer. Tooltips are comprised of a trigger
 button, popover container and text. For further guidance, see Carbon's
-[tooltip component](https://www.carbondesignsystem.com/components/tooltip/usage/).
+[tooltip component](/components/tooltip/usage/).
 
 ## References
 
@@ -418,7 +415,7 @@ Popup,[Component research](https://open-ui.org/components/popup.research#popup),
 (OpenUI)
 
 Disclosure,
-[W3C WAI-ARIA practices]([https://www.w3.org/TR/wai-aria-practices-1.1/#disclosure),
+[W3C WAI-ARIA practices](https://www.w3.org/TR/wai-aria-practices-1.1/#disclosure),
 (W3C Working Group Note)
 
 ## Feedback
