--- a/src/pages/components/tooltip/usage.mdx
+++ b/src/pages/components/tooltip/usage.mdx
@@ -363,7 +363,7 @@ surrounding components or bleeds off the page where some content is not visible.
 ### Further guidance
 
 For further content guidance, see Carbon’s
-[content guidelines](https://carbondesignsystem.com/guidelines/content/overview/).
+[content guidelines](/guidelines/content/overview/).
 
 ## Universal behaviors
 
@@ -494,8 +494,8 @@ interactive elements. For further guidance, see Carbon's toggletip component.
 Chart tooltips appears when a cursor is positioned over an element on Carbon's
 data viz charts, such as a data point, icon button, or truncated text. These are
 inherent behaviors built into our chart components. Refer to
-[chart anatomy](https://carbondesignsystem.com/data-visualization/chart-anatomy/#rectangular-charts)
-to learn more about using tooltips in charts.
+[chart anatomy](/data-visualization/chart-anatomy/#rectangular-charts) to learn
+more about using tooltips in charts.
 
 <Row>
 <Column colLg={8}>
