--- a/src/pages/components/toggletip/usage.mdx
+++ b/src/pages/components/toggletip/usage.mdx
@@ -32,11 +32,10 @@ element and can contain interactive elements.
 Toggletips reveal supplemental content when a user clicks a button or another UI
 element and remains actively open until a user dismisses it. A toggletip is
 comprised of a UI trigger and the
-[popover component](http://carbondesignsystem.com/components/popover/usage/).
-Use the disclosure pattern to design supplemental content within the component.
-Toggletips can include a wide variety of information and interactive elements as
-long
-as[accessibility requirements](https://www.ibm.com/able/requirements/requirements/)
+[popover component](/components/popover/usage/). Use the disclosure pattern to
+design supplemental content within the component. Toggletips can include a wide
+variety of information and interactive elements as long as
+[accessibility requirements](https://www.ibm.com/able/requirements/requirements/)
 are maintained including focus order and ensuring all functionality is operable
 through a keyboard interface.
 
@@ -84,8 +83,7 @@ or `Click` depending on use case.
 ### When to not use
 
 Don't use to present critical information or request required input needed to
-complete a workflow. Use the
-[modal component](https://carbondesignsystem.com/components/modal/usage/)
+complete a workflow. Use the [modal component](/components/modal/usage/)
 instead.
 
 ## Formatting
@@ -179,7 +177,7 @@ scroll horizontally or let content bleed off the page.
 ### Further guidance
 
 For further content guidance, see Carbon's
-[content guidelines](<[https://www.carbondesignsystem.com/guidelines/content/general](https://www.carbondesignsystem.com/guidelines/content/general)>).
+[content guidelines](/guidelines/content/general)).
 
 ## Behaviors
 
@@ -230,10 +228,10 @@ guidance on the disclosure pattern coming soon.
 
 #### Tooltip
 
-[Tooltips](https://www.carbondesignsystem.com/components/tooltip/usage/) display
-additional information upon hover or focus. The information included should be
-contextual, helpful, and nonessential while providing that extra ability to
-communicate and give clarity to a user.
+[Tooltips](/components/tooltip/usage/) display additional information upon hover
+or focus. The information included should be contextual, helpful, and
+nonessential while providing that extra ability to communicate and give clarity
+to a user.
 
 ## Feedback
 
