--- a/src/pages/components/checkbox/style.mdx
+++ b/src/pages/components/checkbox/style.mdx
@@ -44,8 +44,9 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Typography
 
-Checkbox labels should be sentence case, with only the first word in a phrase
-and any proper nouns capitalized. Checkbox labels should not exceed three words.
+Checkbox labels and group labels should be sentence case, with only the first
+word in a phrase and any proper nouns capitalized. Checkbox labels and group
+labels should not exceed three words.
 
 | Element        | Font-size (px/rem) | Font-weight   | Type token         |
 | -------------- | ------------------ | ------------- | ------------------ |
@@ -67,6 +68,14 @@ and any proper nouns capitalized. Checkbox labels should not exceed three words.
 <div className="image--fixed">
 
 ![Structure and spacing measurements for checkbox](images/checkbox-style-3.png)
+
+</div>
+
+<Caption>Structure and spacing measurements for checkbox | px / rem</Caption>
+
+<div className="image--fixed">
+
+![Structure and spacing measurements for checkbox](images/checkbox-style-4.png)
 
 </div>
 
