docs(code): update code.mdx table formatting

--- a/src/pages/guidelines/motion/code.mdx
+++ b/src/pages/guidelines/motion/code.mdx
@@ -68,11 +68,19 @@ from the package by writing the following:
 
 #### API
 
-<br />| Name | Type | | :---------------------- | :------- | |
-`$duration-fast-01` | Duration | | `$duration-fast-02` | Duration | |
-`$duration-moderate-01` | Duration | | `$duration-moderate-02` | Duration | |
-`$duration-slow-01` | Duration | | `$duration-slow-02` | Duration | | `$easings`
-| Map | | `@mixin motion` | Mixin | | `@function motion` | Mixin |
+<br />
+
+| Name                    | Type     |
+| :---------------------- | :------- |
+| `$duration-fast-01`     | Duration |
+| `$duration-fast-02`     | Duration |
+| `$duration-moderate-01` | Duration |
+| `$duration-moderate-02` | Duration |
+| `$duration-slow-01`     | Duration |
+| `$duration-slow-02`     | Duration |
+| `$easings`              | Map      |
+| `@mixin motion`         | Mixin    |
+| `@function motion`      | Mixin    |
 
 ### JavaScript
 
