--- a/src/pages/guidelines/spacing/code.mdx
+++ b/src/pages/guidelines/spacing/code.mdx
@@ -68,15 +68,32 @@ the following:
 
 #### API
 
-<br />| Export | Description | !default | | :------------------ | :---------- |
-:------- | | `$spacing-01` | | ✅ | | `$spacing-02` | | ✅ | | `$spacing-03` | |
-✅ | | `$spacing-04` | | ✅ | | `$spacing-05` | | ✅ | | `$spacing-06` | | ✅ |
-| `$spacing-07` | | ✅ | | `$spacing-08` | | ✅ | | `$spacing-09` | | ✅ | |
-`$spacing-10` | | ✅ | | `$spacing-11` | | ✅ | | `$spacing-12` | | ✅ | |
-`$spacing-13` | | ✅ | | `$spacing ` | | | | `$fluid-spacing-01` | | ✅ | |
-`$fluid-spacing-02` | | ✅ | | `$fluid-spacing-03` | | ✅ | |
-`$fluid-spacing-04` | | ✅ | | `$fluid-spacing ` | | | | `@function em` | | | |
-`@function rem` | | | | `$base-font-size` | | ✅ |
+<br />
+
+| Export              | Description | !default |
+| :------------------ | :---------- | :------- |
+| `$spacing-01`       |             | ✅       |
+| `$spacing-02`       |             | ✅       |
+| `$spacing-03`       |             | ✅       |
+| `$spacing-04`       |             | ✅       |
+| `$spacing-05`       |             | ✅       |
+| `$spacing-06`       |             | ✅       |
+| `$spacing-07`       |             | ✅       |
+| `$spacing-08`       |             | ✅       |
+| `$spacing-09`       |             | ✅       |
+| `$spacing-10`       |             | ✅       |
+| `$spacing-11`       |             | ✅       |
+| `$spacing-12`       |             | ✅       |
+| `$spacing-13`       |             | ✅       |
+| `$spacing `         |             |          |
+| `$fluid-spacing-01` |             | ✅       |
+| `$fluid-spacing-02` |             | ✅       |
+| `$fluid-spacing-03` |             | ✅       |
+| `$fluid-spacing-04` |             | ✅       |
+| `$fluid-spacing `   |             |          |
+| `@function em`      |             |          |
+| `@function rem`     |             |          |
+| `$base-font-size`   |             | ✅       |
 
 ### Configuration
 
