fix(grid): update usage docs for v11

--- a/src/pages/guidelines/2x-grid/implementation.mdx
+++ b/src/pages/guidelines/2x-grid/implementation.mdx
@@ -15,9 +15,9 @@ with five default breakpoints and dozens of predefined classes.
 
 <InlineNotification>
 
-If you’re using carbon-components there’s no reason to install the grid package
-separately. See our [get started](/get-started/develop/react) guide to start
-building.
+If you’re using `@carbon/styles` or `@carbon/react` there’s no reason to install
+the grid package separately. See our [get started](/get-started/develop/react)
+guide to start building.
 
 </InlineNotification>
 
