--- a/src/pages/components/checkbox/style.mdx
+++ b/src/pages/components/checkbox/style.mdx
@@ -67,16 +67,21 @@ labels should not exceed three words.
 
 <div className="image--fixed">
 
-![Structure and spacing measurements for checkbox](images/checkbox-style-3.png)
+![Structure and spacing measurements for a checkbox group](images/checkbox-style-3.png)
 
 </div>
 
-<Caption>Structure and spacing measurements for checkbox | px / rem</Caption>
+<Caption>
+  Structure and spacing measurements for a checkbox group | px / rem
+</Caption>
 
 <div className="image--fixed">
 
-![Structure and spacing measurements for checkbox](images/checkbox-style-4.png)
+![Structure and spacing measurements for vertical and horizontal checkbox groupings](images/checkbox-style-4.png)
 
 </div>
 
-<Caption>Structure and spacing measurements for checkbox | px / rem</Caption>
+<Caption>
+  Structure and spacing measurements for vertical and horizontal checkbox
+  groupings | px / rem
+</Caption>
