update: image content

--- a/src/pages/components/pagination/style.mdx
+++ b/src/pages/components/pagination/style.mdx
@@ -45,11 +45,19 @@ it's being paired with.
 
 <div className="image--fixed">
 
-![Structure and spacing for pagination](images/pagination-style-1.png)
+![Spacing measurements for pagination](images/pagination-style-1.png)
 
 </div>
 
-<Caption>Structure and spacing measurements for Pagination | px / rem</Caption>
+<Caption>Spacing measurements for pagination | px / rem</Caption>
+
+<div className="image--fixed">
+
+![Structure measurements for pagination](images/pagination-style-2.png)
+
+</div>
+
+<Caption>Structure measurements for pagination | px / rem</Caption>
 
 ## Sizes
 
