migration: update design intro

--- a/src/pages/migrating/guide/design.mdx
+++ b/src/pages/migrating/guide/design.mdx
@@ -1,8 +1,9 @@
 ---
 title: Guide
 description:
-  The transition from v10 to v11 includes updates and additions to color tokens,
-  theming, and introduces beta kits to experiment with.
+  The transition from v10 to v11 includes significant updates and additions to
+  color tokens, theming, size naming, with new components providing better
+  accessibility, collaboration, and efficiency for users.
 tabs: ['Overview', 'Design', 'Develop']
 ---
 
@@ -10,8 +11,9 @@ import { Tag } from '@carbon/react';
 
 <PageDescription>
 
-The transition from v10 to v11 includes updates and additions to color tokens,
-theming, size naming, and new components.
+The transition from v10 to v11 includes significant updates and additions to
+color tokens, theming, size naming, with new components providing better
+accessibility, collaboration, and efficiency for users.
 
 </PageDescription>
 
@@ -211,8 +213,7 @@ responsive and the type styles change size at different breakpoints.
   <Column colLg={4} colMd={4} noGutterSm>
     <ResourceCard
       subTitle="Type token migration table"
-      href="https://github.com/carbon-design-system/carbon/blob/main/docs/migration/v11.md#type-tokens"
-    >
+      href="https://github.com/carbon-design-system/carbon/blob/main/docs/migration/v11.md#type-tokens">
       <MdxIcon name="github" />
     </ResourceCard>
   </Column>
@@ -278,8 +279,7 @@ for more information.
   <Column colLg={4} colMd={4} noGutterSm>
     <ResourceCard
       subTitle="Color token migration table"
-      href="https://github.com/carbon-design-system/carbon/blob/main/docs/migration/v11.md#design-tokens"
-    >
+      href="https://github.com/carbon-design-system/carbon/blob/main/docs/migration/v11.md#design-tokens">
       <MdxIcon name="github" />
     </ResourceCard>
   </Column>
